# CashFlowMonitor

./: .gitignore  README.md  package.json  tailwind.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src/app/: globals.css  layout.tsx
src/app/balans/: page.tsx
src/app/dashboard/: page.tsx
src/app/koszty/: page.tsx
src/app/przychody/: page.tsx
src/app/upgrade/: page.tsx
src/app/ustawienia/: page.tsx
src/components/: ads-banner.tsx  app-shell.tsx  company-mode-toggle.tsx  database-gate.tsx  plan-badge.tsx
src/lib/db/: client.ts  init.ts  migrate.ts
src/lib/db/migrations/: 001_init.sql  index.ts
src/lib/db/repositories/: bank-accounts.ts  entitlements.ts  expenses.ts  incomes.ts  private-expenses.ts  settings.ts  tax-obligations.ts
src/lib/db/seed/: index.ts
src/lib/domain/: balance-engine.ts  entitlements-engine.ts  tax-engine.ts
src/lib/domain/__tests__/: balance-engine.test.ts  tax-engine.test.ts
src/lib/hooks/: useBankAccounts.ts  useDatabaseInit.ts  useEntitlements.ts  useExpenses.ts  useIncomes.ts  usePrivateExpenses.ts  useSettings.ts  useTaxObligations.ts
src/lib/storage/: helpers.ts  index.ts  indexeddb.ts
src/lib/types/: index.ts
src/lib/utils/: date.ts
